<resources>
    <string name="app_name">NoodleDroid</string>

    <string name="connectFragmentTitle">Connect</string>
    <string name="touchpadFragmentTitle">TouchPad</string>
    <string name="keyboardFragmentTitle">Keyboard</string>

    <string name="serverDisconnected">"Server disconnected. Cannot communicate"</string>
    <string name="connectionSuccessful">Connected to the Server</string>
    <string name="connectionFailed">Connection Failed</string>

    <string name="connectButton">Connect</string>

    <string name="touchpad">TouchPad</string>
    <string name="keypad">KeyPad</string>
    <string name="ipAddressLabel">Enter Desktop IP Address:</string>
    <string name="portAddressLabel">Enter Desktop Port:</string>

    <string name="touchPadLeftButton">Left</string>
    <string name="touchPadRightButton">Right</string>

    <string name="ctrlButton">Ctrl</string>
    <string name="altButton">Alt</string>
    <string name="deleteButton">Delete</string>
    <string name="tabButton">Tab</string>
    <string name="shiftButton">Shift</string>

    <string name="numLockButton">Num Lock</string>
    <string name="capsLockButton">Caps Lock</string>
    <string name="scrollLockButton">Scroll Lock</string>

    <string name="homeButton">Home</string>
    <string name="endButton">End</string>
    <string name="printScreenButton">Print Screen</string>
    <string name="menuButton">Menu</string>

    <string name="windowsButton">Win</string>

    <string name="escapeButton">Esc</string>
    <string name="functionKey_1">F1</string>
    <string name="functionKey_2">F2</string>
    <string name="functionKey_3">F3</string>
    <string name="functionKey_4">F4</string>
    <string name="functionKey_5">F5</string>
    <string name="functionKey_6">F6</string>
    <string name="functionKey_7">F7</string>
    <string name="functionKey_8">F8</string>
    <string name="functionKey_9">F9</string>
    <string name="functionKey_10">F10</string>
    <string name="functionKey_11">F11</string>
    <string name="functionKey_12">F12</string>

    <string name="enterButton">Enter"\u21A9"</string>

    <string name="keyboardEditTextHint">Touch here to access alphanumeric characters</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="keyboardNavBarMenuItem">Keyboard</string>
    <string name="touchpadNavBarMenuItem">TouchPad</string>
    <string name="connectNavBarMenuItem">Connect to PC</string>
</resources>
