<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connectNavBarMenuItem" />
        <item
            android:id="@+id/nav_keyboard_fragment"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/keyboardNavBarMenuItem" />

        <item
            android:id="@+id/nav_touchpad_fragment"
            android:icon="@drawable/ic_touchpad"
            android:title="@string/touchpadNavBarMenuItem" />
    </group>

</menu>
