<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionFragment"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/homeScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hapticFeedbackEnabled="false"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <TextView
                android:id="@+id/ipAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipAddressLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="117dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="127dp" />

            <EditText
                android:id="@+id/ipAddressEditText"
                android:layout_width="327dp"
                android:layout_height="40dp"
                android:autoText="false"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hapticFeedbackEnabled="true"
                android:inputType="text|numberDecimal"
                android:text="192.168.137."
                android:textAlignment="center"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="142dp" />
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.093">


            <TextView
                android:id="@+id/portLabel"
                android:layout_width="206dp"
                android:layout_height="23dp"
                android:labelFor="@+id/portEditText"
                android:text="@string/portAddressLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="273dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="127dp" />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="327dp"
                android:layout_height="40dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hapticFeedbackEnabled="true"
                android:importantForAutofill="no"
                android:inputType="text|numberDecimal"
                android:text="8080"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="296dp" />

        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="129dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="210dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="148dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="488dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="291dp" />

        <Button
            android:id="@+id/connectButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/connectButton"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>